--- a/MoogleServer/Pages/Index.razor.css
+++ b/MoogleServer/Pages/Index.razor.css
@@ -1,8 +1,10 @@
 .results {
     text-align: left;
+    font-size:larger;
+    font-weight:bold;
 }
 
 .item .title {
-    font-size: large;
-    font-weight: bold;
+    font-size: x-large;
+    font-weight: bolder;
 }
