--- a/MoogleServer/wwwroot/css/site.css
+++ b/MoogleServer/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-image: url('Hills.jpg')
 }
 
 h1:focus {
@@ -9,7 +10,7 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #c10000;
+    color: #0071c1;
 }
 
 .btn-primary {
