Snippet casi completo

--- a/MoogleServer/Pages/Index.razor
+++ b/MoogleServer/Pages/Index.razor
@@ -10,7 +10,7 @@
 
 @if (!string.IsNullOrEmpty(result.Suggestion)) {
     <div class="suggestion">
-        <h4>¿Quisite decir <strong><a href="#">@result.Suggestion</a></strong>?</h4>
+            <h4>¿Quizás quisiste decir <strong><a href="#">@result.Suggestion</a></strong>?</h4>
     </div>
 }
 
