--- a/MoogleServer/Pages/Index.razor.css
+++ b/MoogleServer/Pages/Index.razor.css
@@ -1,7 +1,9 @@
 .results {
     text-align: left;
-    font-size:larger;
-    font-weight:bold;
+    font-size: larger;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 4px 8px black;
 }
 
 .item .title {
