--- a/MoogleServer/Pages/Index.razor.css
+++ b/MoogleServer/Pages/Index.razor.css
@@ -2,8 +2,8 @@
     text-align: left;
     font-size: larger;
     font-weight: bold;
-    color: white;
-    text-shadow: 2px 4px 8px black;
+    color: black;
+    text-shadow: 2px 4px 8px white;
 }
 
 .item .title {
